feat: wraps logo into link

--- a/.env.local.sample
+++ b/.env.local.sample
@@ -2,6 +2,7 @@ NEXT_PUBLIC_BASE_PATH=
 NEXT_PUBLIC_SLUG=
 NEXT_PUBLIC_DOMAIN=
 NEXT_PUBLIC_HOSTED=
+NEXT_PUBLIC_MAIN_URL=
 
 E2E_CLIENT_ID=
 E2E_ENDPOINT=
