Revert "fix: temporary commit"
This reverts commit 7267c8b5d30910cd16a82b223ce2b7b83952dae3.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "mfe-checkout",
   "version": "4.12.1",
+  "engines": {
+    "node": ">=20.x"
+  },
   "private": true,
   "scripts": {
     "preinstall": "npx only-allow pnpm",
